add package, test commit on new box

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -47,6 +47,7 @@
           - zsh
           - the_silver_searcher
           - syncthing
+          - podman-docker
 
 
 - name: Install asdf and oh-my-zsh for mike
